<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>day1_hw1_pkg</name>
  <version>0.0.0</version>
  <description>OpenCV demo (no ROS APIs)</description>
  <maintainer email="geonhu@todo.todo">geonhu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- OpenCV 의존성 -->
  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>