<?xml version="1.0"?>
<package format="3">
  <name>day2_hw1_pkg</name>
  <version>0.0.1</version>
  <description>Qt + OpenCV UDP demo (ROS 2 GUI)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>


  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
